// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - File Upload  Default renders correctly 1`] = `
<div
  class="ecl-form-group ecl-form-group--file-upload"
>
  <label
    class="ecl-form-label"
    for="example-input-id-1"
  >
    Label    
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-file-upload"
    name="file-upload-name"
    type="file"
  />
</div>
`;

exports[`EC - File Upload  Default renders correctly when disabled 1`] = `
<div
  class="ecl-form-group ecl-form-group--file-upload"
>
  <label
    class="ecl-form-label ecl-form-label--disabled"
    for="example-input-id-1"
  >
    Label    
  </label>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-file-upload"
    name="file-upload-name"
    type="file"
  />
</div>
`;

exports[`EC - File Upload  Default renders correctly when invalid 1`] = `
<div
  class="ecl-form-group ecl-form-group--file-upload"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-input-id-1"
  >
    Label    
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <div
    class="ecl-feedback-message"
  >
    Invalid text
  </div>
  <input
    class="ecl-file-upload ecl-file-upload--invalid"
    name="file-upload-name"
    type="file"
  />
</div>
`;

exports[`EC - File Upload  Default renders correctly when required 1`] = `
<div
  class="ecl-form-group ecl-form-group--file-upload"
>
  <label
    class="ecl-form-label"
    for="example-input-id-1"
  >
    Label
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-file-upload"
    required=""
    type="file"
  />
</div>
`;

exports[`EC - File Upload  Default renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group ecl-form-group--file-upload"
>
  <label
    class="ecl-form-label"
    for="example-input-id-1"
  >
    Label    
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-file-upload"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    name="file-upload-name"
    type="file"
  />
</div>
`;

exports[`EC - File Upload  Default renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--file-upload custom-class custom-class--test"
>
  <label
    class="ecl-form-label"
    for="example-input-id-1"
  >
    Label    
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <input
    class="ecl-file-upload"
    name="file-upload-name"
    type="file"
  />
</div>
`;
